changes on 10th jan