@@ -18,7 +18,7 @@
 		<java.version>1.8</java.version>
 		<testng.version>7.3.0</testng.version>
 		<maven.compiler.version>3.8.1</maven.compiler.version>
-		<maven.surefire.version>2.14.1</maven.surefire.version>
+		<maven.surefire.version>3.0.0-M1</maven.surefire.version>
 	</properties>
 
 	<dependencies>
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>3.141.59</version>
+			<version>3.14.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aventstack</groupId>
@@ -63,15 +63,15 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven.surefire.version}</version>
 				<configuration>
+					<forkCount>0</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					
 					<suiteXmlFiles>
 						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
-					<!-- <includes>
-						<include>**/ParallelRun.java</include>
-					</includes> -->
-					<parallel>methods</parallel>
-					<useUnlimitedThreads>true</useUnlimitedThreads>
 				</configuration>
+
 			</plugin>
 
 			<plugin>
